--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,11 +13,16 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./src/css/index.css">
+
+    <script src="https://unpkg.com/imask"></script>
+    <script type="module"  src="./src/main.js" ></script>
   </head>
   <body>
     <div id="app">
       <header>
-        <img src="logo.svg" alt="ícone rocketpay" />
+        <img src="./public/logo.svg" alt="ícone rocketpay" />
       </header>
 
       <section class="cc">
@@ -102,10 +107,10 @@
         </div>
 
         <div class="cc-logo">
-          <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
+          <span><img src="./public/cc-icon.svg" alt="ícone padrão de cartão" /></span>
           <span
             ><img
-              src="/cc-default.svg"
+              src="./public/cc-default.svg"
               alt="ícone do cartão de crédito selecionado"
           /></span>
         </div>
@@ -127,7 +132,7 @@
               <div class="label">CVC</div>
               <div class="value">123</div>
             </div>
-            <img src="/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
+            <img src="./public/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
           </div>
         </div>
       </section>
@@ -159,6 +164,6 @@
       </form>
     </div>
 
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
