--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
           <span><img src="./public/cc-icon.svg" alt="ícone padrão de cartão" /></span>
           <span
             ><img
+              id="iconCard"
               src="./public/cc-default.svg"
               alt="ícone do cartão de crédito selecionado"
           /></span>
