--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <span
             ><img
               id="iconCard"
-              src="./public/cc-default.svg"
+              src="/public/cc-default.svg"
               alt="ícone do cartão de crédito selecionado"
           /></span>
         </div>
